@@ -106,11 +106,11 @@ namespace spatial
 
     explicit frozen_boxset(dimension_type dim)
       : base_type(details::Dynamic_rank(dim << 1))
-    { }
+    { except::check_rank_argument(dim); }
 
     frozen_boxset(dimension_type dim, const Compare& compare)
       : base_type(details::Dynamic_rank(dim << 1), compare)
-    { }
+    { except::check_rank_argument(dim); }
 
     explicit frozen_boxset(const Compare& compare)
       : base_type(details::Dynamic_rank(2), compare)
@@ -119,7 +119,7 @@ namespace spatial
     frozen_boxset(dimension_type dim, const Compare& compare,
 		  const Alloc& alloc)
       : base_type(details::Dynamic_rank(dim << 1), compare, alloc)
-    { }
+    { except::check_rank_argument(dim); }
 
     frozen_boxset(const Compare& compare, const Alloc& alloc)
       : base_type(details::Dynamic_rank(2), compare, alloc)
@@ -157,11 +157,11 @@ namespace spatial
 
     explicit runtime_frozen_boxset(dimension_type dim)
       : base_type(details::Dynamic_rank(dim << 1))
-    { }
+    { except::check_rank_argument(dim); }
 
     runtime_frozen_boxset(dimension_type dim, const Compare& compare)
       : base_type(details::Dynamic_rank(dim << 1), compare)
-    { }
+    { except::check_rank_argument(dim); }
 
     explicit runtime_frozen_boxset(const Compare& compare)
       : base_type(details::Dynamic_rank(2), compare)
@@ -170,7 +170,7 @@ namespace spatial
     runtime_frozen_boxset(dimension_type dim, const Compare& compare,
 			  const Alloc& alloc)
       : base_type(details::Dynamic_rank(dim << 1), compare, alloc)
-    { }
+    { except::check_rank_argument(dim); }
 
     runtime_frozen_boxset(const Compare& compare, const Alloc& alloc)
       : base_type(details::Dynamic_rank(2), compare, alloc)
@@ -189,6 +189,6 @@ namespace spatial
     }
   };
 
-}
+} // namespace spatial
 
 #endif // SPATIAL_FROZEN_BOXSET_HPP
