@@ -111,21 +111,21 @@ namespace spatial
 
     explicit pointset(dimension_type dim)
       : base_type(details::Dynamic_rank(dim))
-    { }
+    { except::check_rank_argument(dim); }
 
     pointset(dimension_type dim, const Compare& compare)
       : base_type(details::Dynamic_rank(dim), compare)
-    { }
+    { except::check_rank_argument(dim); }
 
     pointset(dimension_type dim, const Compare& compare,
 		     const BalancingPolicy& policy)
       : base_type(details::Dynamic_rank(dim), compare, policy)
-    { }
+    { except::check_rank_argument(dim); }
 
     pointset(dimension_type dim, const Compare& compare,
 		     const BalancingPolicy& policy, const Alloc& alloc)
       : base_type(details::Dynamic_rank(dim), compare, policy, alloc)
-    { }
+    { except::check_rank_argument(dim); }
 
     explicit pointset(const Compare& compare)
       : base_type(details::Dynamic_rank(), compare)
@@ -171,21 +171,21 @@ namespace spatial
 
     explicit runtime_pointset(dimension_type dim)
       : base_type(details::Dynamic_rank(dim))
-    { }
+    { except::check_rank_argument(dim); }
 
     runtime_pointset(dimension_type dim, const Compare& compare)
       : base_type(details::Dynamic_rank(dim), compare)
-    { }
+    { except::check_rank_argument(dim); }
 
     runtime_pointset(dimension_type dim, const Compare& compare,
 		     const BalancingPolicy& policy)
       : base_type(details::Dynamic_rank(dim), compare, policy)
-    { }
+    { except::check_rank_argument(dim); }
 
     runtime_pointset(dimension_type dim, const Compare& compare,
 		     const BalancingPolicy& policy, const Alloc& alloc)
       : base_type(details::Dynamic_rank(dim), compare, policy, alloc)
-    { }
+    { except::check_rank_argument(dim); }
 
     explicit runtime_pointset(const Compare& compare)
       : base_type(details::Dynamic_rank(), compare)
